[package]
name = "nom-uri"
version = "0.1.0"
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version="5.1.1", default-features = false}
hash32-derive = "0.1.0"
hash32 = "0.1.1"